--- a/Contact me.html
+++ b/Contact me.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="eng"> 
-<head> 
+<head><link rel="stylesheet" href="./styles.css" /> 
 <title> Contact me  </title>
 <meta charset="utf-8">
 </head>
