--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="eng"> 
-<head> <title> Resume </title> <meta charset="utf-8"> </head>
+<head> <link rel="stylesheet" href="./styles.css" /> <title> Resume </title> <meta charset="utf-8"> </head>
 <body> 
 <h1>Mr junaid Kasim Aden </h1>
 <img src="./jun.png" height="200px" width="120">
