--- a/my hobbies.html
+++ b/my hobbies.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="eng">
-<head><title>My hobbies</title></head>
+<head><link rel="stylesheet" href="./styles.css" /><title>My hobbies</title></head>
 <body>
 <h2> My hobbies  </h2>
 <p > 
